2022-10-26  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\textbf): define.
	(\textsf): do not define, to catch package names we want in tt.

2022-04-13  Karl Berry  <karl@freefriends.org>

	* tugboat.front (\smc): define as scaled cmcsc, so "Algol"
	in tb133quote comes out correctly.

2021-10-30  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\textbar): hacky definition for tb132ad-aw.

2021-09-06  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\exhyphenpenalty): set to 10000 please.

2021-04-16  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\slMF, \slMP): define here, using \manualsl.

2020-10-11  Karl Berry  <karl@freefriends.org>

	* tubtocmac (\OpTeX): define, with kern.

2020-08-23  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\BibLaTeX): define, with kern.

2019-10-14  Karl Berry  <karl@tug.org>

	* tubtocmac.tex: doc fix.

2019-09-13  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\Xe): tinker with spacing when slanted.

2019-09-12  Karl Berry  <karl@freefriends.org>

	* (\hangindif): reduce to 10pt, so that \@hangindwd
	matches the \normalparindent of 20pt to give more spaces for titles.

This ChangeLog file is public domain.