@@ -1,0 +1,10 @@
+% $Id$
+% Public domain (from tb136inn).
+@misc{typeed,
+ title          = {{Typeset a page in under 10 minutes in InDesign}},
+ autor          = {{{Type-Ed}}},
+ year           = {2017},
+ month          = {May},
+ url            = {https://youtube.com/watch?v=VVIQE6kht8c},
+ note           = {San Bruno, CA: YouTube}
+}
