@@ -1,0 +1,13 @@
+% $Id$
+% Public domain.
+% Simple TUGboat bibliography test.
+\documentclass{ltugboat}
+
+\begin{document}
+
+\bibliographystyle{tugboat}
+\cite{typeed}
+\bibliography{tubbib}
+
+\makesignature
+\end{document}
