@@ -1,3 +1,12 @@
+2023-01-11  Karl Berry  <karl@freefriends.org>
+
+	* tugboat.bst: doc fix.
+	* tugboat.dtx (\tburl): define to be \tbsurl (or \url),
+	since that works ok in all cases now.
+	(\@listii): doc list spacing parameters.
+
+	* Makefile (bibcheck): new target.
+
 2022-11-06  Karl Berry  <karl@freefriends.org>
 
 	* tugboat.dtx (\hyphenation): add Lua-Meta.
