@@ -1,3 +1,7 @@
+2023-01-11  Karl Berry  <karl@freefriends.org>
+
+	* pdfcrop-tub: support multiple input files; crop each separately.
+
 2022-10-28  Karl Berry  <karl@freefriends.org>
 
 	* tugboat.abbr-ctx (\definecolor, \from, \BL): new abbrevs.
